# infovulcan

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  REQUIREMENTS_STATUS.md  TODO.md  WEEK2_PLAN.md  WEEK3_PLAN.md  deny.toml  lcov.info  services.toml  tarpaulin.toml
admin/: Cargo.toml
admin/proto/: admin.proto
admin/src/: main.rs  server.rs
auth/: Cargo.toml
auth/src/: main.rs  server.rs
chaos/: Cargo.toml
chaos/src/: chaos_service.rs  main.rs
custodian/: Cargo.toml
custodian/proto/: custodian.proto
custodian/src/: db_client.rs  main.rs  metrics.rs  network.rs  raft.rs  raft_service.rs  server.rs  storage.rs  tests.rs
custodian/tests/: admin_integration.rs  three_node_cluster.rs
db/: Cargo.toml
db/proto/: db.proto
db/src/: main.rs  network.rs  raft.rs  raft_service.rs  server.rs  storage.rs
db/tests/: mtls.rs  pqc_wire.rs  three_node_cluster.rs
deploy/: README.md
deploy/ops/: .gitignore  admin.json  auth.json  chaos.json  custodian.json  db.json  honeypot.json  lbrp.json
deploy/ops/lbrp-conf/infovulcan/: services.toml
honeypot/: Cargo.toml
honeypot/proto/: honeypot.proto
honeypot/src/: lib.rs  main.rs  reporter.rs  service.rs  traps.rs
honeypot/tests/: reporting.rs
lbrp/: Cargo.toml
lbrp/src/: clients.rs  discovery.rs  error.rs  main.rs  routes.rs  tests.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  pqc.rs  tls.rs
proto/tests/: tls_env.rs
raft-rpc/: Cargo.toml
raft-rpc/src/: lib.rs
scripts/: build-images.sh  coverage.sh  gen-certs.sh
shared/: Cargo.toml
shared/src/: discovery.rs  encryption.rs  error.rs  key_store.rs  lib.rs  ticket.rs
spikes/: README.md
spikes/raft-toy/: Cargo.toml
spikes/raft-toy/src/: lib.rs
spikes/raft-toy/tests/: single_node.rs  three_node.rs
spikes/tonic-mtls/: Cargo.toml  build.rs
spikes/tonic-mtls/proto/: echo.proto
spikes/tonic-mtls/src/: lib.rs
spikes/tonic-mtls/tests/: mtls_roundtrip.rs
test-support/: Cargo.toml
test-support/src/: lib.rs
tests/src/: e2e.rs  lib.rs
web/: Cargo.toml  index.html
web/src/: api.rs  domain.rs  main.rs  theme.rs
web/src/components/: login.rs  ticket_list.rs
