[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }

# gRPC framework
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"

# Shared types
shared = { path = "../shared" }

# Proto definitions
proto = { path = "../proto" }

# Crypto & Auth
argon2 = "0.5"
# Use the aws-lc-rs crypto provider instead of the pure-Rust `rust_crypto` one: the latter pulls
# the `rsa` crate, which carries the unfixed Marvin timing advisory (RUSTSEC-2023-0071). aws-lc-rs
# provides the HS256 we use (and any RSA) without that crate. `use_pem` for key parsing.
jsonwebtoken = { version = "10.2", default-features = false, features = ["aws_lc_rs", "use_pem"] }
rand = "0.10.1"
# TOTP (RFC 6238) for MFA verification
totp-rs = { version = "5.7", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23"
tokio-stream = "0.1"
