[package]
name = "honeypot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# gRPC
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"

# Proto definitions (HoneypotService + admin client)
proto = { path = "../proto" }

# Utilities
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
