[package]
name = "spike-raft-toy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# Week 1 spike: a multi-node openraft cluster wired together with an
# in-process loopback "network", on top of `openraft-memstore` (the in-memory
# `RaftStorage` reference impl). Lets us drive election, replication, and
# leader failover end-to-end without spinning up sockets — the goal is to
# internalize Raft mechanics, not to test transport.
#
# Uses openraft 0.9 + the v1 RaftStorage trait via `Adaptor`, matching the
# production `db` and `custodian` services.

[dependencies]
openraft = { version = "0.9", features = ["serde"] }
openraft-memstore = "0.9"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1.0"
